<resources>
    <string name="app_name">SConnection</string>
    <string name="title_activity_sign_up_view">SignUpView</string>
    <string name="user_name_tv">Credentials</string>
    <string name="user_name_et">Username</string>
    <string name="user_password_et">Password</string>
    <string name="client_type_tv">Client type</string>
    <string name="user_rb">Are you a provider?</string>
    <string name="provider_rb">Provider</string>
    <string name="register_b">Register</string>

    <string name="title_activity_login_view">SConnection</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">SConnection</string>
</resources>
