<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.edu.eafit.teis.sconnection.signup.view.SignUpView"
    tools:showIn="@layout/sign_up_view">

    <TextView
        android:text="@string/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/user_name_tv"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/user_name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/user_name_et"
        android:hint="@string/user_name_et" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/user_name_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/user_password_et"
        android:hint="@string/user_password_et" />

    <RadioButton
        android:text="@string/user_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/user_rb"
        android:layout_below="@+id/client_type_tv"
        android:layout_alignStart="@+id/user_password_et"
        android:textSize="18sp" />

    <RadioButton
        android:text="@string/provider_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_rb"
        android:layout_alignStart="@+id/user_rb"
        android:layout_marginTop="17dp"
        android:id="@+id/provider_rb"
        android:textSize="18sp" />

    <Button
        android:text="@string/register_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/register_b" />

    <TextView
        android:text="@string/client_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_type_tv"
        android:textSize="24sp"
        android:layout_below="@+id/user_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>
